k8s/lawn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lawn
  labels:
    app.kubernetes.io/name: lawn
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: lawn
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lawn
    spec:
      containers:
        - name: lawn
          image: ghcr.io/lemisieur-services/lawn:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
