k8s/lawn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lawn
  labels:
    app.kubernetes.io/name: lawn
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: lawn
