k8s/lawn/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lawn
  namespace: lawn
spec:
  entryPoints:
  - websecure
  tls:
    secretName: lab-lemisieur-com
  routes:
  - kind: Rule
    match: Host(`lawn.lab.lemisieur.com`)
    services:
    - name: lawn
      port: 80
